When autostart is set, play videos on mobile devices when more than 50% of the video element is visible and pause otherwise. Once a user interacts with the video, stop autoplay behavior. JW7-3322

--- a/src/css/imports/nextup.less
+++ b/src/css/imports/nextup.less
@@ -115,7 +115,17 @@
   color: @nextup-close-button-color-hover;
 }
 
-.jw-nextup-sticky .jw-nextup-close {
-  opacity: 1;
-  visibility: visible;
+.jw-nextup-sticky {
+  .jw-nextup-close {
+    opacity: 1;
+    visibility: visible;
+  }
+
+}
+
+.jw-flag-nextup {
+  // Hide autostart mute button when showing nextup
+  .jw-autostart-mute {
+    display: none;
+  }
 }
